# mexc-cpp-sdk

./: .bazelrc  .gitignore  BUILD.bazel  CMakeLists.txt  MODULE.bazel  README.md  WORKSPACE
docs/: MARKET_API_TEST.md
examples/: futures_market.cpp  futures_trade.cpp  futures_websocket.cpp  spot_market_rest.cpp  spot_trade.cpp  spot_trade_websocket.cpp  spot_websocket.cpp  test_futures_market_rest.cpp  test_futures_market_ws.cpp  test_spot_market_rest.cpp  test_spot_market_ws.cpp
include/mexc/: base.hpp  json_util.hpp  signature.hpp
include/mexc/futures/: market.hpp  trade.hpp  websocket.hpp
include/mexc/spot/: market.hpp  trade.hpp  trade_websocket.hpp  websocket.hpp
scripts/: run_market_tests.sh
src/: futures_market.cpp  futures_trade.cpp  futures_websocket.cpp  http_client.cpp  json_util.cpp  signature.cpp  spot_market.cpp  spot_trade.cpp  spot_trade_websocket.cpp  spot_websocket.cpp
tools/: parse_rest_output.cpp  parse_ws_jsonl.cpp
